# shadepoint

./: .env.sample.txt  .gitignore  CNAME  Dockerfile  GeodesignHub.py  Procfile  README.md  app.json  app.py  babel.cfg  common.py  config.py  conn.py  data_definitions.py  db_helper.py  docker-compose.yaml  download_helper.py  notifications_helper.py  prestart.py  prestart.sh  pyproject.toml  requirements.txt  start.sh  utils.py  worker.py
dashboard/: __init__.py  conn.py  extension.py
dashboard/configurations/: data_helper.py  external_layers.yaml
dashboard/models/: __init__.py
dashboard/nbsapi/: __init__.py  data_definitions.py  views.py
dashboard/nbsapi/commands/: measure_type_definitions.json  nbs_definitions.json  project_definitions.json  seed_db.py
dashboard/nbsapi/local_geodesign_fixture/: nbs_definitions.json  seed_db.py
dashboard/nbsapi/models/: __init__.py  apiversion.py  measure_type.py  naturebasedsolution.py  nbs_site.py  project.py
dashboard/nbsapi/routers/: adaptationtargets.py  impacts.py  naturebasedsolutions.py
dashboard/static/css/: common.css  style.css  (+1 more)
dashboard/templates/: design_flooding_analysis.html  design_shadow.html  diagram_shadow.html  draw_diagram.html  home.html  layout.html
docs/: index.html
docs/css/: styles.css
migrations/: env.py
migrations/versions/: 0f0204733cd0_initial_migration.py  2b69e7bdc981_.py  58df12bd0c0c_.py  983ca4a2d0eb_.py  cd61e60118f7_v2_migration.py  da8ca8207093_initial_migration.py  f37e2c96b396_.py
shadepoint-gh-pages/: index.html
templates/: diagram_shadow.html  home.html  layout.html
(+10 files in other folders)
